htbin/Docs/CommandLineTests.txt
================================================================================
Test des scripts en ligne de commande:

================================================================================
CYGWIN avec Mobaxterm:
Attention a utiliser la bonne version de Python !!!
--------------------------------------------------------------------------------
PYTHONPATH=/drives/c/Python/3.2.3-0.3/Lib/site-packages:htbin/revlib htbin/sources/top/enumerate.process.py

Traceback (most recent call last):
  File "htbin/sources/top/enumerate.process.py", line 3, in <module>
    import lib_common
  File "/drives/d/Projects/Divers/Reverse/PythonStyle/htbin/revlib/lib_common.py", line 4, in <module>
    import psutil
  File "/drives/c/Python/3.2.3-0.3/Lib/site-packages/psutil/__init__.py", line 92, in <module>
    raise NotImplementedError('platform %s is not supported' % sys.platform)
NotImplementedError: platform cygwin is not supported

Conclusion: Ne pas tout baser sur psutil.

--------------------------------------------------------------------------------
PYTHONPATH=/drives/c/Python/3.2.3-0.3/Lib/site-packages:htbin/revlib htbin/sources/top/cgi_arp.py

gvim Traceback (most recent call last):
  File "htbin/sources/top/cgi_arp.py", line 22, in <module>
    import rdflib
  File "/drives/c/Python/3.2.3-0.3/Lib/site-packages/rdflib-4.1.2-py3.2.egg/rdflib/__init__.py", line 108, in <module>
    from rdflib.term import (
  File "/drives/c/Python/3.2.3-0.3/Lib/site-packages/rdflib-4.1.2-py3.2.egg/rdflib/term.py", line 46, in <module>
    from urllib.parse import urlparse, urljoin, urldefrag
ImportError: No module named parse


Conclusion: On est coince avec rdflib, pour cygwin.

--------------------------------------------------------------------------------
PYTHONPATH=/drives/c/Python/3.2.3-0.3/Lib/site-packages:htbin/revlib:/drives/c/Python/3.2.3-0.3/Lib htbin/sources/top/cgi_arp.py
'import site' failed; use -v for traceback
Traceback (most recent call last):
  File "htbin/sources/top/cgi_arp.py", line 20, in <module>
    import re
  File "/drives/c/Python/3.2.3-0.3/Lib/re.py", line 119, in <module>
    import sre_compile
  File "/drives/c/Python/3.2.3-0.3/Lib/sre_compile.py", line 14, in <module>
    import sre_parse
  File "/drives/c/Python/3.2.3-0.3/Lib/sre_parse.py", line 101
    print(level*"  " + op, end=' '); nl = 0
                              ^
SyntaxError: invalid syntax

Conclusion: En effet, qu est ce que ca veut dire?
Et en plus notre Python pour Cygwin est trop ancien:
python -V
Python 2.6.5

J'ai essaye de lancer le Python pour Windows, mais ca a planta la session mobaxterm.

